# RobeLauncher

./: .gitignore  Cargo.toml  Core.sln  chess_engine.py  chess_gui.py  chess_gui_init.py  colors.py  config.json  config.txt  config_load.py  consts.py  exceptions.py  gui_init.py  main.py  main_gui.py  robe_launcher.py  states.py
.cargo/: config.toml
Chess/: AttackGenerator.cs  AttackedSquaresGenerator.cs  BitboardUtils.cs  Bitboards.cs  Board.cs  CastlingState.cs  Chess.csproj  ChessUtils.cs  MatchMaker.cs  Move.cs  MoveGen.cs  Piece.cs  Player.cs  PlayerHuman.cs  PrecomputedSquareData.cs
Chess/MagicBitboards/: MagicBitboardsData.cs  MagicBitboardsGenerator.cs
Chess/Tests/: MoveGenSpeedTest.cs
Core/: Config.cs  Game.cs  Konfig.cs  OverallUtils.cs  RobeLauncher.code-workspace
GUI/: GUI.cs  GUI.csproj  Main.cs
GUI/Content/: Content.mgcb
Main/: Main.cs
MainConsole/: Main.cs  MainConsole.csproj
MainGUI/: Main.cs  MainGUI.csproj
chess/: Cargo.toml
chess/benches/: move_gen_benchmark.rs  perft_benchmark.rs
chess/src/: bitboards.rs  board.rs  board_representation.rs  castling.rs  config.rs  game_manager.rs  lib.rs  piece.rs  player.rs
chess/src/move/: mod.rs  move_record.rs
chess/src/move_generation/: attack_calculator.rs  mod.rs  move_gen.rs
chess/src/perft/: mod.rs  perft_node.rs
chess/src/precomputed_data/: bitboard_data.rs  bitboard_data_gen.rs  magic_bitboard_gen.rs  magic_bitboards_data.rs  magic_loader.rs  magic_lookup_moves.rs  magic_lookup_table.rs  magic_score.rs  magic_search.rs  magics.json  mod.rs  square_data.rs  square_magic.rs
core/: Cargo.toml
core/src/: config.rs  game.rs  lib.rs
launcher/: Cargo.toml
launcher/src/: main.rs
stockfish/: Cargo.toml
stockfish/benches/: perft_benchmark.rs
stockfish/src/: config.rs  lib.rs
stockfish/src/stockfish_service/: mod.rs  stockfish_perft_response.rs
stockfish/src/stockfish_wrapper/: mod.rs  stockfish_response.rs
