[package]
name = "chess"
version = "0.0.0"
authors = ["Rostislav Beryoza <rostislav.beryoza.work@gmail.com>"]
edition = "2021"

[dependencies]
core = { path = "../core"}
phf = {version = "0.11.2", features = ["macros"]}
rand = "0.9.0"
once_cell = "1.18"
rayon = "1.10.0"
serde_json = "1.0.68"
lazy_static = "1.5.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "move_gen_benchmark"
harness = false

[[bench]]
name = "perft_benchmark"
harness = false