[package]
name = "stockfish"
version = "0.0.0"
authors = ["Rostislav Beryoza <rostislav.beryoza.work@gmail.com>"]
edition = "2021"

[dependencies]
chess = { path = "../chess" }
tokio = { version = "1.0", features = ["full"] }
once_cell = "1.18.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "perft_benchmark"
harness = false